--- a/www/src/com/bue/extramirror/index.html
+++ b/www/src/com/bue/extramirror/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
-  <title>Speed Camera</title>  
+  <title>Restaurant</title>  
 
   <!-- All our CSS -->
   <!-- onsen-css-components.css is the skin of your app, you can generate one custom skin with this generator: http://components.onsen.io/ -->
@@ -28,7 +28,7 @@
 <body>    
   
   <ons-sliding-menu
-    menu-page="activity_intro.xml mirror_intro.xml" main-page="MirrorActivity.java IntroActivity.java" side="left"
+    menu-page="menu.html" main-page="MirrorActivity.java" side="left"
     var="menu" type="reveal" max-slide-distance="260px" swipable="true" swipe-target-width="50">
   </ons-sliding-menu>
 
